{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 397,
  "lineage": "005fcb7a-5aba-3b5e-5b4a-865bb8ae8a94",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-eC2-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0dcb5067f052a63",
            "arn": "arn:aws:ec2:us-east-1:242451082977:instance/i-0aec8f8df8045a632",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aec8f8df8045a632",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e0b0271719149fa6",
            "private_dns": "ip-10-100-2-233.ec2.internal",
            "private_ip": "10.100.2.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0556f8a3d70efeaa3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096acd70391cc87c7",
            "tags": {
              "Name": "demo-ec2-private"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-035787e59a79b5682"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_security_group.demo-private-sg",
            "aws_subnet.demo-private-subnet",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-eC2-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0dcb5067f052a63",
            "arn": "arn:aws:ec2:us-east-1:242451082977:instance/i-0fe16e8165c0cd26f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe16e8165c0cd26f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bc7bc47397f189b1",
            "private_dns": "ip-10-100-1-176.ec2.internal",
            "private_ip": "10.100.1.176",
            "public_dns": "ec2-54-91-195-127.compute-1.amazonaws.com",
            "public_ip": "54.91.195.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d3d1f16b2e6fbd30",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02fcc7c867a892a78",
            "tags": {
              "Name": "demo-ec2-public"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01a93c51acc1b99fe"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_security_group.demo-public-sg",
            "aws_subnet.demo-public-subnet",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo1-eC2-private",
      "provider": "provider.aws.east2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0beaa649c482330f7",
            "arn": "arn:aws:ec2:us-east-2:242451082977:instance/i-072d3a403e804fdd7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-072d3a403e804fdd7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo1key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-096942955e2191f24",
            "private_dns": "ip-10-200-2-220.us-east-2.compute.internal",
            "private_ip": "10.200.2.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08fea903c9f45c5bc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9617f7d8169be14",
            "tags": {
              "Name": "demo1-ec2-private"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bf00a8f724a52c0b"
            ]
          },
          "dependencies": [
            "aws_security_group.demo1-sg",
            "aws_subnet.demo1-private-subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242451082977:internet-gateway/igw-01d81b27bdf54d5d2",
            "id": "igw-01d81b27bdf54d5d2",
            "owner_id": "242451082977",
            "tags": {
              "Name": "demo"
            },
            "vpc_id": "vpc-07196eefd994253c6"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "demo12demo",
      "provider": "provider.aws.east2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.100.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-002069f85c0c51178373368074",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-002069f85c0c51178",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0be4fb5c95ecf900a"
          },
          "dependencies": [
            "aws_vpc.demo",
            "aws_vpc.demo1",
            "aws_vpc_peering_connection.demo-demo1-vpc-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "demo2demo1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.200.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0234085a3d9eb01ad4252409353",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0234085a3d9eb01ad",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0be4fb5c95ecf900a"
          },
          "dependencies": [
            "aws_vpc.demo",
            "aws_vpc.demo1",
            "aws_vpc_peering_connection.demo-demo1-vpc-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242451082977:route-table/rtb-00aeca8fbe084b7f1",
            "id": "rtb-00aeca8fbe084b7f1",
            "owner_id": "242451082977",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01d81b27bdf54d5d2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-public-subnet"
            },
            "vpc_id": "vpc-07196eefd994253c6"
          },
          "dependencies": [
            "aws_internet_gateway.demo-igw",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f539de454b927bca",
            "route_table_id": "rtb-00aeca8fbe084b7f1",
            "subnet_id": "subnet-02fcc7c867a892a78"
          },
          "dependencies": [
            "aws_internet_gateway.demo-igw",
            "aws_route_table.demo-public",
            "aws_subnet.demo-public-subnet",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-private-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242451082977:security-group/sg-035787e59a79b5682",
            "description": "security group that allows ssh and all egress traffic and ingress only in 10.100.1.0/24",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035787e59a79b5682",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo-private-sg",
            "name_prefix": "",
            "owner_id": "242451082977",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07196eefd994253c6"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-public-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242451082977:security-group/sg-01a93c51acc1b99fe",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a93c51acc1b99fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "242451082977",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07196eefd994253c6"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo1-sg",
      "provider": "provider.aws.east2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:242451082977:security-group/sg-0bf00a8f724a52c0b",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf00a8f724a52c0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.2.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.100.2.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo1-sg",
            "name_prefix": "",
            "owner_id": "242451082977",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db50740df08008b2"
          },
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242451082977:subnet/subnet-096acd70391cc87c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.100.2.0/24",
            "id": "subnet-096acd70391cc87c7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242451082977",
            "tags": {
              "Name": "demo-private-subnet"
            },
            "tags_all": {
              "Name": "demo-private-subnet"
            },
            "vpc_id": "vpc-07196eefd994253c6"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242451082977:subnet/subnet-02fcc7c867a892a78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.100.1.0/24",
            "id": "subnet-02fcc7c867a892a78",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "242451082977",
            "tags": {
              "Name": "demo-public-subnet"
            },
            "tags_all": {
              "Name": "demo-public-subnet"
            },
            "vpc_id": "vpc-07196eefd994253c6"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo1-private-subnet",
      "provider": "provider.aws.east2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:242451082977:subnet/subnet-0e9617f7d8169be14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.200.2.0/24",
            "id": "subnet-0e9617f7d8169be14",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242451082977",
            "tags": {
              "Name": "demo1-private-subnet"
            },
            "tags_all": {
              "Name": "demo1-private-subnet"
            },
            "vpc_id": "vpc-0db50740df08008b2"
          },
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242451082977:vpc/vpc-07196eefd994253c6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-091b1fe37e65158c3",
            "default_route_table_id": "rtb-0234085a3d9eb01ad",
            "default_security_group_id": "sg-0ba2e2af90d6136e1",
            "dhcp_options_id": "dopt-06fb7bb364025fa87",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07196eefd994253c6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0234085a3d9eb01ad",
            "owner_id": "242451082977",
            "tags": {
              "Name": "demo"
            },
            "tags_all": {
              "Name": "demo"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo1",
      "provider": "provider.aws.east2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:242451082977:vpc/vpc-0db50740df08008b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-0a0e2039abb170e35",
            "default_route_table_id": "rtb-002069f85c0c51178",
            "default_security_group_id": "sg-00f822b1155f2929b",
            "dhcp_options_id": "dopt-09b29ee8ea3cc07bc",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0db50740df08008b2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-002069f85c0c51178",
            "owner_id": "242451082977",
            "tags": {
              "Name": "demo1"
            },
            "tags_all": {
              "Name": "demo1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "demo-demo1-vpc-peering",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-0be4fb5c95ecf900a",
            "peer_owner_id": "242451082977",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0db50740df08008b2",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "demo-demo1-vpc-peering"
            },
            "vpc_id": "vpc-07196eefd994253c6"
          },
          "dependencies": [
            "aws_vpc.demo",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "accept",
      "provider": "provider.aws.east2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0be4fb5c95ecf900a",
            "peer_owner_id": "242451082977",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0db50740df08008b2",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Side": "Accepter"
            },
            "vpc_id": "vpc-07196eefd994253c6",
            "vpc_peering_connection_id": "pcx-0be4fb5c95ecf900a"
          },
          "dependencies": [
            "aws_vpc.demo",
            "aws_vpc.demo1",
            "aws_vpc_peering_connection.demo-demo1-vpc-peering"
          ]
        }
      ]
    }
  ]
}